objects/Price_Visibility__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Channel_Code__c</fullName>
        <label>Dist. Channel Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Type__c</fullName>
        <label>Pricing Request Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Org Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Price Visibility</label>
</CustomObject>